--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </ol>
         <br>
         <br>
-        <span>Created for my </span> <a href = "https://www.cmu.edu/interdisciplinary/academics/capstone.html">BXA Capstone</a>  
-        <span> project, to combine my concentrations in computer science and music performance</span>
+        <span>Created as a </span> <a href = "https://www.cmu.edu/interdisciplinary/academics/capstone.html">BXA Capstone</a>  
+        <span> project, to combine concentrations in computer science and music performance</span>
     </div>
 </body>
 </html>
